Update and sync api
